--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
  -->
 <html>
   <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
@@ -27,13 +28,22 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <!-- // <script src="popup.js"></script> -->
+
   </head>
   <body>
     <h1>check page?</h1>
-    <button id="checkPage">Check</button>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    <section>
+      <div class="pic-comments"></div>
+      <div class="text-comments">
+<div class="form-control">
+        <input type="text" placeholder="type here" id="textComments">
+        <button class="btn btn-success submit" id="submitComments">comment</button>
+      </div>      </div>
+    </section>
+    <script type="text/javascript" src="firebase.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="utility.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
 
